[package]
name = "libtashkeel"
version = "1.1.0"
authors = ["Musharraf Omer<ibnomer2011@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "libtashkeel"
crate-type = ["cdylib"]

[features]
ort = ["libtashkeel_base/ort"]
tract = ["libtashkeel_base/tract"]
default = ["tract"]

[dependencies]
ffi-support = "0.4.4"
libc = "0.2.147"
once_cell = "1.18.0"

[dependencies.libtashkeel_base]
path = "../libtashkeel_base"
default-features = false
