[package]
name = "libtashkeel_base"
version = "1.1.0"
authors = ["Musharraf Omer<ibnomer2011@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[features]
default = ["tract"]
ort = ["dep:ort"]
tract = ["bytes", "tract-nnef"]

[dependencies]
bytes = { version = "1.0.1", optional = true }
log = "0.4.18"
ndarray = "0.15.6"
once_cell = "1.18.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.47"

[dependencies.tract-nnef]
git = "https://github.com/sonos/tract/"
rev = "77231e2aea26efa71fc657f0b1f96b1a35bcc916"
version = "0.20.19-pre"
optional = true

[dependencies.ort]
version = "1.15.1"
default-features = false
features = ["load-dynamic"]
optional = true

[dev-dependencies.ort]
version = "1.15.1"
default-features = false
features = ["load-dynamic"]
