[package]
name = "pylibtashkeel"
version = "1.1.0"
authors = ["Musharraf Omer<ibnomer2011@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "pylibtashkeel"
crate-type = ["cdylib"]

[features]
ort = ["libtashkeel_base/ort"]
tract = ["libtashkeel_base/tract"]
default = ["ort"]

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module", "abi3-py37",]

[dependencies.libtashkeel_base]
path = "../libtashkeel_base"
default-features = false
