[package]
name = "tashkeel"
version = "1.1.0"
authors = ["Musharraf Omer<ibnomer2011@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[features]
ort = ["libtashkeel_base/ort"]
tract = ["libtashkeel_base/tract"]
default = ["ort"]

[dependencies]
anyhow = "1.0.72"
env_logger = "0.10.0"
log = "0.4.18"

[dependencies.clap]
version = "4.3.2"
features = ["derive",]

[dependencies.libtashkeel_base]
path = "../libtashkeel_base"
default-features = false
