[package]
name = "libtashkeel"
version = "1.5.0"
authors = ["Musharraf Omer<ibnomer2011@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
description = "Arabic-text diacritic restoration using neural networks"
repository = "https://github.com/mush42/libtashkeel"
documentation = "https://github.com/mush42/libtashkeel"

[lib]
name = "libtashkeel"
crate-type = ["cdylib"]

[features]
ort = ["libtashkeel_core/ort"]
default = ["ort"]
ort-dylib = ["libtashkeel_core/ort-dylib"]

[dependencies]
ffi-support = "0.4.4"
libc = "0.2.147"
once_cell = "1.18.0"

[dependencies.libtashkeel_core]
path = "../core"
default-features = false

[build-dependencies]
cbindgen = "0.26.0"
