[package]
name = "tashkeel"
version = "1.5.0"
authors = ["Musharraf Omer<ibnomer2011@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
description = "Arabic-text diacritic restoration using neural networks"
repository = "https://github.com/mush42/libtashkeel"
documentation = "https://github.com/mush42/libtashkeel"

[package.metadata.wix]
upgrade-guid = "2A9A8753-788C-48B7-BAFA-47CF994C51FC"
path-guid = "B4095211-EE92-481A-B3EF-4B88238200A4"
license = false
eula = false

[features]
default = ["ort"]
ort = ["libtashkeel_core/ort"]
ort-dylib = ["libtashkeel_core/ort-dylib"]

[dependencies]
anyhow = "1.0.72"
env_logger = "0.10.0"
log = "0.4.18"

[dependencies.clap]
version = "4.3.2"
features = ["derive",]

[dependencies.libtashkeel_core]
path = "../core"
default-features = false
