[package]
name = "libtashkeel_core"
version = "1.5.0"
authors = ["Musharraf Omer<ibnomer2011@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
description = "Arabic-text diacritic restoration using neural networks"
repository = "https://github.com/mush42/libtashkeel"
documentation = "https://github.com/mush42/libtashkeel"

[features]
default = ["ort", "rayon"]
rayon = ["dep:rayon"]
ort = ["dep:ort"]
ort-dylib = ["ort/load-dynamic"]

[dependencies]
libtqsm = "0.6.1"
log = "0.4.18"
ndarray = "0.16.1"
once_cell = "1.18.0"
rayon = { version = "1.8.1", optional = true }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.47"

[dependencies.ort]
version = "2.0.0-rc.9"
optional = true

[dev-dependencies.ort]
version = "2.0.0-rc.9"
