[package]
name = "pylibtashkeel"
version = "1.5.0"
authors = ["Musharraf Omer<ibnomer2011@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
description = "Arabic-text diacritic restoration using neural networks"
repository = "https://github.com/mush42/libtashkeel"
documentation = "https://github.com/mush42/libtashkeel"

[lib]
name = "pylibtashkeel"
crate-type = ["cdylib"]

[features]
default = ["ort"]
ort = ["libtashkeel_core/ort"]
ort-dylib = ["libtashkeel_core/ort-dylib"]

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module", "abi3-py37",]

[dependencies.libtashkeel_core]
path = "../core"
default-features = false
